[gd_scene load_steps=4 format=3 uid="uid://dc07s3p1wcyek"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_gm5gb"]
[ext_resource type="Theme" uid="uid://dy4doi4lyieg0" path="res://resources/ui_theme.tres" id="2_a3c5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5xh8y"]
bg_color = Color(0, 0, 0, 1)

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_gm5gb")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5xh8y")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -62.0
offset_right = 258.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_a3c5p")
theme_override_font_sizes/font_size = 90
text = "GAME OVER"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Restart?"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
